# NES_Emulator

./: CMakeLists.txt  README.md  build.sh  diff.txt  out.txt  test.sh
include/: bus.h  cartridge.h  cpu.h  emulator.h  opcodes.h  ppu.h  window.h
src/: bus.cpp  cartridge.cpp  cpu.cpp  emulator.cpp  main.cpp  ppu.cpp  window.cpp
